fix: Scroll pre when it overflows

--- a/mkdocs_landing/css/style.css
+++ b/mkdocs_landing/css/style.css
@@ -199,6 +199,7 @@ blockquote + ul {
 
 pre {
     padding: 1rem;
+    overflow-x: auto;
 }
 
 .altmetric-citation {
